exports[`Radio Test controlled component 1`] = `
<div
  className="zad-radio-group">
  <Radio
    checked={true}
    disabled={false}
    onChange={[Function]}
    wrapperClassName="zad-radio-group-item">
    男性
  </Radio>
  <Radio
    checked={false}
    disabled={false}
    onChange={[Function]}
    wrapperClassName="zad-radio-group-item">
    女性
  </Radio>
  <Radio
    checked={false}
    disabled={false}
    onChange={[Function]}
    wrapperClassName="zad-radio-group-item">
    其他
  </Radio>
</div>
`;

exports[`Radio Test uncontrolled component 1`] = `
<div
  className="zad-radio-group">
  <Radio
    checked={false}
    disabled={false}
    onChange={[Function]}
    wrapperClassName="zad-radio-group-item">
    男性
  </Radio>
  <Radio
    checked={false}
    disabled={false}
    onChange={[Function]}
    wrapperClassName="zad-radio-group-item">
    女性
  </Radio>
  <Radio
    checked={true}
    disabled={false}
    onChange={[Function]}
    wrapperClassName="zad-radio-group-item">
    其他
  </Radio>
</div>
`;

exports[`Radio Test with disabled 1`] = `
<div
  className="zad-radio-group">
  <Radio
    checked={false}
    disabled={false}
    onChange={[Function]}
    wrapperClassName="zad-radio-group-item">
    男性
  </Radio>
  <Radio
    checked={true}
    disabled={true}
    onChange={[Function]}
    wrapperClassName="zad-radio-group-item">
    女性
  </Radio>
  <Radio
    checked={false}
    disabled={false}
    onChange={[Function]}
    wrapperClassName="zad-radio-group-item">
    其他
  </Radio>
</div>
`;
